--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,15 @@ firebase.json
 firestore.rules
 serviceAccountKey.json
 Securitycode
+# API Keys
+*.key
+*.keys
+*.secret
+*.secrets
+*.credentials
+OPENFOODFACT_API_KEY
+EDAMAM_APP_ID
+EDAMAM_APP_KEY
+CALORIENINJAS_API_KEY
+FATSECRET_CONSUMER_KEY
+FATSECRET_CONSUMER_SECRET
