--- a/.env.production
+++ b/.env.production
@@ -5,3 +5,8 @@ VITE_USE_MOCK_DATA=false
 # API Keys
 VITE_EDAMAM_APP_ID=64b66d05
 VITE_EDAMAM_APP_KEY=7598859c968254ec27441ad9ed9197d3
+VITE_CALORIENINJAS_API_KEY=xxtcYPKPQyJ4NascI0BlQZNMmleexcaUMxrIPOAJ
+VITE_FATSECRET_CONSUMER_KEY=e183372840d64335a3541530080e4303
+VITE_FATSECRET_CONSUMER_SECRET=114f31ebfd3e46cf80e99d7b00170466
+VITE_MONGODB_URI=mongodb+srv://safebiteuser:aditya@cluster0.it7rvya.mongodb.net/
+VITE_GOOGLE_GENAI_API_KEY=AIzaSyDzRb8YtCnJxJAw-ke3qvh8Z-cIt5KyxDA
