--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "server"
   ],
   "dependencies": {
-    "express": "^4.18.2",
+    "@genkit-ai/googleai": "^1.5.0",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -51,7 +51,9 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
+    "express": "^4.18.2",
     "firebase": "^11.5.0",
+    "genkit": "^1.5.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
