--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==2.2.3
-Flask-PyMongo==2.3.0
 Flask-Cors==3.0.10
 pymongo==4.3.3
 gunicorn==20.1.0
 bson==0.5.10
 python-dotenv==1.0.0
+requests==2.31.0
