--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@react-three/drei": "^10.0.6",
+    "@react-three/fiber": "^9.1.2",
     "@tanstack/react-query": "^5.56.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -53,6 +55,7 @@
     "embla-carousel-react": "^8.3.0",
     "express": "^4.18.2",
     "firebase": "^11.5.0",
+    "framer-motion": "^12.7.4",
     "genkit": "^1.5.0",
     "highcharts": "^12.2.0",
     "input-otp": "^1.2.4",
@@ -68,10 +71,11 @@
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
     "react-to-pdf": "^2.0.0",
-    "recharts": "^2.12.7",
+    "recharts": "^2.15.3",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.175.0",
     "vaul": "^0.9.3",
     "zod": "^3.23.8"
   },
