--- a/package.json
+++ b/package.json
@@ -96,9 +96,14 @@
     "globals": "^15.9.0",
     "lovable-tagger": "^1.1.8",
     "postcss": "^8.4.47",
+    "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": "^3.4.11",
+    "terser": "^5.29.2",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^6.2.4"
+    "vite": "^6.2.4",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-pwa": "^0.19.0",
+    "workbox-window": "^7.0.0"
   }
 }
